# EW_LibraryHub

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
src/: CMakeLists.txt  EW_File.h  EW_FileHandler.h  ew_filehandler.cpp  main.cpp
